added ssl params and Diffie-Hellman group

--- a/default.conf
+++ b/default.conf
@@ -3,8 +3,8 @@ server {
     listen 443 ssl;
     server_name recipe-site.localhost;
 
-    ssl_certificate /etc/nginx/ssl/selfsigned.crt;
-    ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
+    include snippets/self-signed.conf;
+	include snippets/ssl-params.conf;
 
     location / {
         proxy_pass https://host.docker.internal:8081;
