--- a/compose.yaml
+++ b/compose.yaml
@@ -5,10 +5,12 @@ services:
       - "443:443"
       - "80:80"
     volumes:
+    # Default Configuration
       - type: bind
         source: default.conf
         target: /etc/nginx/conf.d/default.conf
         read_only: true
+    # SSL Files
       - type: bind
         source: ssl/certs/nginx-selfsigned.crt
         target: /etc/nginx/ssl/selfsigned.crt
@@ -16,4 +18,17 @@ services:
       - type: bind
         source: ssl/private/nginx-selfsigned.key
         target: /etc/nginx/ssl/selfsigned.key
+        read_only: true
+      - type: bind
+        source: ssl/certs/dhparam.pem
+        target: /etc/ssl/certs/dhparam.pem
+        read_only: true
+    # Snippets
+      - type: bind
+        source: ./snippets/self-signed.conf
+        target: /etc/nginx/snippets/self-signed.conf
+        read_only: true
+      - type: bind
+        source: ./snippets/ssl-params.conf
+        target: /etc/nginx/snippets/ssl-params.conf
         read_only: true
