--- a/.github/workflows/update-ec2.yml
+++ b/.github/workflows/update-ec2.yml
@@ -31,12 +31,13 @@ jobs:
       - name: Save secret to .pem file
         run: | 
           echo $PRIVATE_KEY > private-key.pem
+          cat private-key.pem
         env:
           PRIVATE_KEY: ${{ secrets.WEBSERVER_CONTAINERS_EC2_KEY }}
 
-      - name: Test connection to remote ec2 server
-        run: | 
-          ssh -i "private-key.pem" ubuntu@ec2-18-224-18-112.us-east-2.compute.amazonaws.com
-          cat /home/ubuntu/test-ssh
-          exit
+      # - name: Test connection to remote ec2 server
+      #   run: | 
+      #     ssh -i "private-key.pem" ubuntu@ec2-18-224-18-112.us-east-2.compute.amazonaws.com
+      #     cat /home/ubuntu/test-ssh
+      #     exit
       
