--- a/.github/workflows/update-ec2.yml
+++ b/.github/workflows/update-ec2.yml
@@ -35,9 +35,14 @@ jobs:
         env:
           PRIVATE_KEY: ${{ secrets.WEBSERVER_CONTAINERS_EC2_KEY }}
 
-      # - name: Test connection to remote ec2 server
-      #   run: | 
-      #     ssh -i "private-key.pem" ubuntu@ec2-18-224-18-112.us-east-2.compute.amazonaws.com
-      #     cat /home/ubuntu/test-ssh
-      #     exit
+      - name: Add EC2 host to known_hosts
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan -H ec2-18-224-18-112.us-east-2.compute.amazonaws.com >> ~/.ssh/known_hosts
+      
+      - name: SSH into EC2 and run command
+        run: |
+          chmod 600 private-key.pem
+          ssh -i "private-key.pem" ubuntu@ec2-18-224-18-112.us-east-2.compute.amazonaws.com 'cat /home/ubuntu/test-ssh'
+
       
