--- a/.github/workflows/update-ec2.yml
+++ b/.github/workflows/update-ec2.yml
@@ -23,11 +23,6 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Check workspace file location
-        run: |
-          cat $GITHUB_WORKSPACE/default.conf
-
       - name: Create private key file
         run: |
           echo "${{ secrets.WEBSERVER_CONTAINERS_EC2_KEY }}" > private-key.pem
@@ -42,5 +37,9 @@ jobs:
         run: |
           chmod 600 private-key.pem
           ssh -i "private-key.pem" ubuntu@ec2-18-224-18-112.us-east-2.compute.amazonaws.com 'cat /home/ubuntu/test-ssh'
+
+      - name: Check worskpace files
+        run: |
+          ls -al $GITHUB_WORKSPACE
 
       
