--- a/.github/workflows/update-ec2-reverse-proxy.yml
+++ b/.github/workflows/update-ec2-reverse-proxy.yml
@@ -1,4 +1,4 @@
-name: Update EC2
+name: Update EC2 reverse proxy server
 
 # Controls when the workflow will run
 on:
@@ -33,13 +33,14 @@ jobs:
           mkdir -p ~/.ssh
           ssh-keyscan -H ec2-18-224-18-112.us-east-2.compute.amazonaws.com >> ~/.ssh/known_hosts
 
-      - name: SSH into EC2 and run command
+      - name: Test SSH Connection
         run: |
           chmod 600 private-key.pem
           ssh -i "private-key.pem" ubuntu@ec2-18-224-18-112.us-east-2.compute.amazonaws.com 'cat /home/ubuntu/test-ssh'
 
-      - name: Check worskpace files
+      - name: Upload reverse proxy server files
         run: |
-          ls -al $GITHUB_WORKSPACE
+          rsync -avz -e "ssh -i private-key.pem" $GITHUB_WORKSPACE/compose.yaml $GITHUB_WORKSPACE/default.conf $GITHUB_WORKSPACE/snippets \
+          ubuntu@ec2-18-224-18-112.us-east-2.compute.amazonaws.com:/home/ubuntu/workspace/web-server-reverse-proxy
 
       
