--- a/default.conf
+++ b/default.conf
@@ -1,7 +1,7 @@
 # default.conf
 server {
     listen 443 ssl;
-    server_name recipe-site.localhost;
+    server_name recipe-site.ec2-18-224-18-112.us-east-2.compute.amazonaws.com;
 
     include snippets/self-signed.conf;
 	include snippets/ssl-params.conf;
@@ -11,4 +11,3 @@ server {
         proxy_ssl_verify off; # Disable SSL verification for self-signed cert on target
     }
 }
-# test comment
