--- a/default.conf
+++ b/default.conf
@@ -7,7 +7,7 @@ server {
 	include snippets/ssl-params.conf;
 
     location / {
-        proxy_pass https://host.docker.internal:8081;
+        proxy_pass https://recipe-site:8081;
         proxy_ssl_verify off; # Disable SSL verification for self-signed cert on target
     }
 }
