--- a/.github/workflows/update-ec2-reverse-proxy.yml
+++ b/.github/workflows/update-ec2-reverse-proxy.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Upload reverse proxy server files
         run: |
-          rsync -avz -e "ssh -i private-key.pem" $GITHUB_WORKSPACE/compose.yaml $GITHUB_WORKSPACE/default.conf $GITHUB_WORKSPACE/snippets \
+          rsync -avz -e "ssh -i private-key.pem" $GITHUB_WORKSPACE/compose.yaml $GITHUB_WORKSPACE/Dockerfile $GITHUB_WORKSPACE/default.conf $GITHUB_WORKSPACE/snippets \
           ubuntu@ec2-18-224-18-112.us-east-2.compute.amazonaws.com:/home/ubuntu/workspace/web-server-reverse-proxy
 
       
